<resources>
    <string name="app_name">普天通用4.0</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_login">普天通用4.0</string>
    <string name="string_sign_in">登&#160;录</string>
    <string name="prompt_username">账号</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_ip">I&#160;P&#160;&#160;&#160;&#160;</string>
    <string name="error_null_username">用户名为空</string>
    <string name="error_null_password">密码为空</string>
    <string name="error_null_ip">IP地址为空</string>
    <string name="error_invalid_ip">IP地址无效</string>
    <string name="dialog_prompt_title1">登录提醒</string>
    <string name="dialog_prompt_title2">应用升级</string>
    <string name="dialog_prompt_content1">您的账号在另一台设备上登录</string>
    <string name="dialog_prompt_content2">当前网络不可用，请检查您的网络设置</string>
    <string name="dialog_prompt_content3">用户已离线</string>
    <string name="dialog_prompt_content4">检测到新版本，是否现在升级？</string>
    <string name="dialog_prompt_confim1">重新登录</string>
    <string name="dialog_prompt_confim2">是</string>
    <string name="dialog_prompt_cancel1">知道了</string>
    <string name="dialog_prompt_cancel2">否</string>
    <string name="string_login_error1">用户不存在</string>
    <string name="string_login_error2">密码错误</string>
    <string name="string_login_error3">网络故障</string>
    <string name="string_login_error4">终端类型错误</string>
    <string name="string_login_error5">无漫游权限</string>
    <string name="string_login_error6">未指配电话号码或者鉴权结果不一致</string>
    <string name="string_login_error7">用户被盗窃</string>
    <string name="string_login_error8">账号被其他用户占用</string>
    <string name="string_login_error9">用户数据插入失败</string>
    <string name="string_login_error10">设备认证失败</string>
    <string name="string_login_error11">网络错误</string>
    <string name="string_login_error12">未知用户</string>
    <string name="string_login_error13">未知登录原因</string>
    <string name="string_login_request_fail">登录请求失败，result = </string>
    <string name="string_conversation_stick">置顶</string>
    <string name="string_conversation_unstick">取消置顶</string>
    <string name="string_conversation_delete">删除</string>
    <string name="prompt_no_list">无最近会话</string>
    <string name="string_last_message_audio">[语音]</string>
    <string name="string_last_message_image">[图片]</string>
    <string name="string_last_message_video">[视频]</string>
    <string name="string_last_message_file">[文件]</string>
    <string name="string_last_message_my_location">[位置]</string>
    <string name="string_last_message_audio_call">[语音聊天]</string>
    <string name="string_last_message_unknown">[未知消息类型]</string>
    <string name="string_map_prompt1">无在线用户</string>
    <string name="string_map_prompt2">当前定位位置获取失败</string>
    <string name="string_main_group_call_hangup"> 组呼挂断</string>
    <string name="string_main_delete_group_fail">删除组失败 result=</string>
    <string name="string_main_group_list_prompt">不能选择登录号码</string>
    <string name="string_main_group_member_list_online">在线人数:%1$d    总人数:%2$d</string>
    <string name="string_the_day_before_yesterday">前天</string>
    <string name="string_yesterday">昨天</string>
    <string name="string_year_lib">年</string>
    <string name="string_mouth">月</string>
    <string name="string_day">日</string>
    <string name="string_am">上午</string>
    <string name="string_pm">下午</string>
    <string name="string_message_action_send">发送</string>
    <string name="content_description_empty">描述</string>
    <string name="string_message_audio_button_normal">按住 说话</string>
    <string name="string_message_audio_button_recording">松开 结束</string>
    <string name="string_message_audio_button_want_to_cancel1">松开手指，取消发送</string>
    <string name="string_message_audio_button_want_to_cancel2">手指上滑，取消发送</string>
    <string name="string_message_audio_button_tooshort">录音时间过短</string>
    <string name="string_message_audio_button_exception">语音录制异常</string>
    <string name="sdcard_no_exist">SD卡不存在或不可用</string>
    <string name="record_recording_equipment_is_not_available">录音失败</string>
    <string name="msg_msg_send_error_1">未登录,请登录后发送!</string>
    <string name="msg_msg_send_error_2">可用空间不足500M，无法发送或下载!</string>
    <string name="msg_msg_send_error_3">用户已离线，无法发送</string>
    <string name="msg_msg_send_error_4">视频路径为空</string>
    <string name="msg_msg_send_error_5">视频文件不存在</string>
    <string name="msg_msg_send_error_6">图片路径为空</string>
    <string name="msg_msg_send_error_7">图片文件不存在</string>
    <string name="msg_msg_send_error_8">不能发送空白信息</string>
    <string name="error_no_file">未搜索到任何相关文件</string>
    <string name="error_no_progress">获取发送进度值失败</string>
    <string name="string_photo_progress">%1$d%%</string>
    <string name="string_message_copy">复制</string>
    <string name="string_message_forward_person">转发个人</string>
    <string name="string_message_forward_group">转发组</string>
    <string name="string_message_delete">删除</string>
    <string name="string_message_unknown_size">未知文件大小</string>
    <string name="string_message_unknown_place">未知地点</string>
    <string name="string_message_unknown_location">未知位置</string>
    <string name="string_message_unknown_coordinates">未获取坐标</string>
    <string name="string_message_unknown_data">未获取数据</string>
    <string name="string_message_file_error1">文件输入流异常</string>
    <string name="string_message_file_error2">文件不存在</string>
    <string name="string_my_location_title">位置</string>
    <string name="string_my_location_send">发送</string>
    <string name="string_my_location_place_name">[位置]</string>
    <string name="string_my_location_unknown_location">未获取坐标</string>
    <string name="string_my_location_unknown_path">截屏路径不存在</string>
    <string name="string_file_list_title">手机文件</string>
    <string name="string_file_list_send">发送</string>
    <string name="string_file_list_prompt">发送的文件不能超过%1$d个</string>
    <string name="string_photo_browser_title">照片浏览</string>
    <string name="string_photo_browser_send">发送</string>
    <string name="string_photo_browser_downloading">正在下载文件</string>
    <string name="string_photo_browser_download_fail">下载文件失败</string>
    <string name="string_photo_browser_file_path_inexistence1">文件路径不存在</string>
    <string name="string_photo_browser_file_path_inexistence2">文件路径不存在，无法播放</string>
    <string name="string_photo_list_title">相册</string>
    <string name="string_photo_list_send">发送</string>
    <string name="string_photo_list_original">原图</string>
    <string name="string_photo_list_prompt1">不能分享短于1秒的视频</string>
    <string name="string_photo_list_prompt2">发送的图片或视频不能超过%1$d张</string>
    <string name="string_album_title1">图片与视频</string>
    <string name="string_album_title2">视频</string>
    <string name="string_album_title3">图片</string>
    <string name="string_album_count">%1$d张</string>
    <string name="string_camera_shoot">轻触拍照，按住摄像</string>
    <string name="string_camera_error1">相机异常，请返回！</string>
    <string name="string_camera_error2">可能有其他录音设备正在占用麦克风，请关闭后再录像！</string>
    <string name="string_file_download_title">文件下载</string>
    <string name="string_file_download_start">开始下载</string>
    <string name="string_file_download_restart">重新下载</string>
    <string name="string_file_download_success">下载完成</string>
    <string name="string_file_download_fail">下载失败</string>
    <string name="string_file_download_continue">继续下载</string>
    <string name="string_file_download_loading">正在下载...(%1$d%%)</string>
    <string name="string_file_download_error1">无法打开文件</string>
    <string name="string_file_download_error2">文件路径不存在</string>
    <string name="string_call_record_title">通话记录</string>
    <string name="string_call_record_editor">编辑</string>
    <string name="string_call_record_cancel">取消</string>
    <string name="string_call_record_select_all">全选</string>
    <string name="string_call_record_unselect_all">取消全选</string>
    <string name="string_call_record_delete">删除</string>
    <string name="string_call_record_no_record">无最近记录</string>
    <string name="prompt_call_record_select">请选择至少一条记录</string>
    <string name="string_create_group_title1">创建组</string>
    <string name="string_create_group_title2">消息转发</string>
    <string name="string_create_group_confim1">创建</string>
    <string name="string_create_group_confim2">确定</string>
    <string name="string_create_group_dialog_title">创建组</string>
    <string name="string_create_group_dialog_message">是否创建临时组？</string>
    <string name="string_create_group_dialog_confim">确定</string>
    <string name="string_create_group_dialog_cancel">取消</string>
    <string name="string_create_group_request_fail">创建组请求失败</string>
    <string name="string_create_group_response_fail1">创建组响应失败</string>
    <string name="string_create_group_response_fail2">创建组失败，登录用户最多属于30个组</string>
    <string name="string_create_group_prompt1">已发送</string>
    <string name="string_create_group_prompt2">请输入临时组名</string>
    <string name="string_create_group_prompt3">创建临时组最多选择用户数量为%1$d</string>
    <string name="string_create_group_prompt4">请至少选择一个用户</string>
    <string name="string_create_group_prompt5">组名不允许输入特殊符号</string>
    <string name="string_contact_title">通讯录</string>
    <string name="string_contact_subtitle">创建对讲</string>
    <string name="string_contact_download_success">通讯录下载成功</string>
    <string name="string_contact_download_fail">通讯录下载失败</string>
    <string name="string_delete_group_dialog_title">删除组</string>
    <string name="string_delete_group_dialog_message">是否删除临时组？</string>
    <string name="string_delete_group_dialog_confim">确定</string>
    <string name="string_delete_group_dialog_cancel">取消</string>
    <string name="string_delete_group_fail">删除组请求失败</string>
    <string name="string_settings_title">设置</string>
    <string name="string_settings_account">账号与安全</string>
    <string name="string_settings_account_editor">编辑</string>
    <string name="string_settings_account_modify_password">修改密码</string>
    <string name="string_settings_account_exit">退出登录</string>
    <string name="string_settings_account_dialog_title">确定要退出登录？</string>
    <string name="string_settings_account_dialog_confirm">确定</string>
    <string name="string_settings_account_dialog_cancel">取消</string>
    <string name="string_settings_account_password_old">旧密码</string>
    <string name="string_settings_account_password_new">新密码</string>
    <string name="string_settings_account_password_hint1">请输入旧密码</string>
    <string name="string_settings_account_password_hint2">密码可以为字母、数字或符号</string>
    <string name="string_settings_account_password_confirm">确定</string>
    <string name="string_settings_account_password_null">密码为空</string>
    <string name="string_settings_account_password_error">输入的旧密码错误</string>
    <string name="string_settings_account_password_same">修改密码相同</string>
    <string name="string_settings_account_password_success">修改密码成功</string>
    <string name="string_settings_account_password_fail">修改密码失败</string>
    <string name="string_settings_ringing">振铃</string>
    <string name="string_settings_ringing_ring">铃声</string>
    <string name="string_settings_ringing_shake">振动</string>
    <string name="string_settings_ringing_ring_and_shake">铃声 + 振动</string>
    <string name="string_settings_bit_rate">码率</string>
    <string name="string_settings_back_door">后门</string>
    <string name="string_settings_frame_rate">帧率</string>
    <string name="string_settings_resolution">分辨率</string>
    <string name="string_settings_clear_all_messages">清空聊天记录</string>
    <string name="string_settings_power_saving">省电模式</string>
    <string name="string_settings_restore">还原</string>
    <string name="string_settings_about">关于</string>
    <string name="string_cancel">取消</string>
    <string name="string_answer">接听</string>
    <string name="string_handsFree">免提</string>
    <string name="string_silence">静音</string>
    <string name="string_audio_calling">正在语音呼叫...</string>
</resources>