<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <TextView
        android:id="@+id/copy_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="@dimen/y26"
        android:gravity="center_vertical"
        android:text="@string/string_message_copy"
        android:textColor="@color/colorTextView_04"
        android:textSize="@dimen/y28"/>

    <include android:id="@+id/line" layout="@layout/view_line03_gray_1dp"/>

    <TextView
        android:id="@+id/forward_person_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="@dimen/y26"
        android:gravity="center_vertical"
        android:text="@string/string_message_forward_person"
        android:textColor="@color/colorTextView_04"
        android:textSize="@dimen/y28"/>

    <include layout="@layout/view_line03_gray_1dp"/>

    <TextView
        android:id="@+id/forward_group_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="@dimen/y26"
        android:gravity="center_vertical"
        android:text="@string/string_message_forward_group"
        android:textColor="@color/colorTextView_04"
        android:textSize="@dimen/y28"/>

    <include layout="@layout/view_line03_gray_1dp"/>

    <TextView
        android:id="@+id/delete_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="@dimen/y26"
        android:gravity="center_vertical"
        android:text="@string/string_message_delete"
        android:textColor="@color/colorTextView_04"
        android:textSize="@dimen/y28"/>

</LinearLayout>
